<resources>
    <string name="app_name">MukFinalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_left">Time Left:</string>
    <string name="default_question_title">Question 1 of 5</string>
    <string name="default_question">How is Memory Managed in Android</string>
    <string name="button">Button</string>
    <string name="checkbox">Checkbox</string>
    <string name="textview">TextView</string>
    <string name="radio_button">RadioButton</string>
    <string name="previous">&lt; Prev</string>
    <string name="next">Next &gt;</string>
    <string name="name">Name:</string>
    <string name="start_test">Start Test</string>
    <string name="save_score">Save Score</string>
    <string name="score_history">Score History</string>
    <string name="try_again">Try Again</string>
</resources>