<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFBFB">

    <TextView
        android:id="@+id/timeLeftTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/time_left"
        android:textAlignment="textEnd"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/timeLeftTextView"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="70dp"
        android:paddingTop="40dp"
        android:paddingRight="70dp"
        android:paddingBottom="40dp">

        <TextView
            android:id="@+id/questionTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/default_question_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/default_question"
            android:textSize="19sp"
            app:autoSizeMaxTextSize="19sp"
            app:autoSizeTextType="uniform" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/listDivider" />


        <RadioGroup
            android:id="@+id/questionOptionsRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".55">

            <RadioButton
                android:id="@+id/questionOption1RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_button"
                android:textColor="@color/lambton_purple"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/questionOption2RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_button"
                android:textColor="@color/lambton_purple"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/questionOption3RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_button"
                android:textColor="@color/lambton_purple"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/questionOption4RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_button"
                android:textColor="@color/lambton_purple"
                android:textSize="15sp" />
        </RadioGroup>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previousButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/previous"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@color/lambton_purple" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@color/lambton_purple" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>