<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFBFB"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="40dp"
    android:paddingTop="60dp"
    android:paddingEnd="40dp"
    android:paddingBottom="60dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".75"
        app:srcCompat="@drawable/android_studio" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/timeTakenTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="fill_vertical"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/goodScoreLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/saveScoreButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/save_score"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:backgroundTint="@color/lambton_purple" />

        <Button
            android:id="@+id/scoreHistoryButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/score_history"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:backgroundTint="@color/lambton_purple" />
    </LinearLayout>

    <Button
        android:id="@+id/tryAgainButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:visibility="gone"
        app:backgroundTint="@color/lambton_purple" />
</LinearLayout>